# lccfq-hwman

./: .gitignore  CLAUDE.md  Makefile  README.md  debug_start.py  pyproject.toml
.github/workflows/: code-quality.yml
.run/: hwman_debug.run.xml
configs/: example_config.toml  parameter_manager-parameter_manager.json  serverConfig.yml
hwman/: cli.py  client.py  config.py  errors.py  main.py  setup_measurements.py
hwman/api/: main.py
hwman/certificates/: certificate_cli.py  certificate_manager.py
hwman/client/: client.py
hwman/compiler/: README.md  __init__.py  circuit.py  example.py  lexer.py  parser.py  qick_codegen.py
hwman/grpc/: certificate_cli.py  certificate_manager.py  client.py  server.py
hwman/hw_tests/: full_calib.py  pi_spec.py  power_rabi.py  res_spec.py  res_spec_after_pi.py  res_spec_vs_gain.py  ro_cal.py  run_tuneup.py  sat_spec.py  t1.py  t2x.py  tests.py  utils.py
hwman/measurements/: dummy.py
hwman/services/: __init__.py  circuits.py  health.py  readout_calibrator.py  tests.py
hwman/utils/: fitting.py  hw_tests.py  plotting.py
scripts/: testing_client.py
test_data/2025-09-15T220651_316ab9b2-resonator_spec~3180264c/: data.ddh5
test_data/2025-09-15T220653_32e06a30-resonator_spec_vs_gain~f98b5786/: data.ddh5
test_data/2025-09-15T220654_1606b1e8-Saturation spectroscopy~r96bhfg6/: data.ddh5  instruments.json  parameters.json  sweep_action_kwargs.json
test_data/2025-09-15T220655_811849a0-Amplitude rabi~782ed6ce/: data.ddh5  instruments.json  parameters.json  sweep_action_kwargs.json
test_data/2025-09-15T220656_048566f6-Pi spectroscopy~97bdf1d4/: data.ddh5  instruments.json  parameters.json  sweep_action_kwargs.json
test_data/2025-09-15T220657_941fe156-Res_spec_readout_pre_pi~f5669779/: data.ddh5  instruments.json  sweep_action_kwargs.json
test_data/2025-09-15T220658_2689d6ce-Res_spec_readout_post_pi~e19a85a2/: data.ddh5  instruments.json  parameters.json  sweep_action_kwargs.json
test_data/2025-09-15T220659_113a1912e-T1~5ba1ee50/: data.ddh5  instruments.json  parameters.json  sweep_action_kwargs.json
test_data/2025-09-15T220660_e122324a-T2R~87237761/: data.ddh5  instruments.json  parameters.json  sweep_action_kwargs.json
test_data/2025-09-15T220661_32f09440-T2E~62e1d951/: data.ddh5  instruments.json  parameters.json  sweep_action_kwargs.json
test_data/2025-09-15T220662_06b1dca4-ground_single_shot~a74a8056/: data.ddh5  instruments.json  parameters.json  sweep_action_kwargs.json
test_data/2025-09-15T220663_06eec3f8-excited_single_shot~79e6a6b3/: data.ddh5  instruments.json  sweep_action_kwargs.json
tests/: __init__.py
(+57 files in other folders)
