[project]
name = "lccfq-hwman"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Santiago Nuñez-Corrales", email = "nunezco2@illinois.edu"},
    {name = "Marcos Frenkel", email = "marcosf2@illinois.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gitpython>=3.1.44",
    "grpcio-tools>=1.71.0",
    "h5py>=3.13.0",
    "labcore",
    "pandas>=2.2.3",
    "xarray>=2025.4.0",
    "cryptography>=44.0.0",
]

[tool.uv.sources]
labcore = { git = "https://github.com/toolsforexperiments/labcore" }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]

[tool.mypy]
# Ignore missing imports for external libraries and generated protobuf files
[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.protobuf.*"
ignore_missing_imports = true

# Handle the protobufs_compiled imports
[[tool.mypy.overrides]]
module = "protobufs_compiled.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hwman.grpc.protobufs_compiled.*"
ignore_missing_imports = true

[tool.ruff]
# Exclude directories from ruff linting
exclude = [
    "hwman/grpc/protobufs_compiled/",  # Generated protobuf files
    ".venv/",
    ".mypy_cache/",
    ".ruff_cache/",
    ".git/",
    ".idea/",
]
